Setup git repository and saved.

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-us">
 
 <head>
     <title>My Personal Website</title>
@@ -9,10 +9,18 @@
     <h1>LAB 2</h1>
     <h2>The personal website</h2>
 
-    <p>I am having <em>so much</em> fun coding in HTML. I just learned that Git is important for developers to keep track of their changes <br>
-        and different versions. I'm also writing this in <strong>VSCODE</strong>, which is the best code editor you can use. <br>
+    <p>I am having <em>so much</em> fun coding in HTML. I just learned that Git is important for developers to keep track of their changes
+        and different versions. I'm also writing this in <strong>VSCODE</strong>, which is the best code editor you can use.
         I love computer science.
     </p>
+
+    <h2>My Courses</h2>
+    <ul>
+        <li>COMM 1116 </li>
+        <li>ACIT 1420</li>
+        <LI>ORGB 1100 - <a href="https://www.bcit.ca/outlines/20223041875/">Course Outline</a></LI>
+    </ul>
+<ul></ul>
 
 </body>
 
