Added CSS styling to h1 and background. Added images and BCIT link image.

--- a/index.html
+++ b/index.html
@@ -3,25 +3,39 @@
 
 <head>
     <title>My Personal Website</title>
+    <link rel="stylesheet" href="CSS/stylesheet.css">
 </head>
 
 <body>
+    <main>
+    <header>
     <h1>LAB 2</h1>
+    </header>
+    <article>
     <h2>The personal website</h2>
 
     <p>I am having <em>so much</em> fun coding in HTML. I just learned that Git is important for developers to keep track of their changes
         and different versions. I'm also writing this in <strong>VSCODE</strong>, which is the best code editor you can use.
         I love computer science.
     </p>
+    </article>
 
+    <section>
     <h2>My Courses</h2>
     <ul>
         <li>COMM 1116 </li>
         <li>ACIT 1420</li>
         <LI>ORGB 1100 - <a href="https://www.bcit.ca/outlines/20223041875/">Course Outline</a></LI>
     </ul>
-<ul></ul>
+    </section>
 
+<footer>
+    <img src="images/0015_13A.jpg" alt="DOG" width="200" height="135">
+    <br>
+    <a href="https://www.bcit.ca/"><img src="images/BCIT_logo.svg.png" alt="BCIT logo" width="100" height="100"></a>
+   
+</footer>
+</main>
 </body>
 
 </html>
