Moved course list to courses.html

--- a/index.html
+++ b/index.html
@@ -21,18 +21,14 @@
     </article>
 
     <section>
-    <h2>My Courses</h2>
-    <ul>
-        <li>COMM 1116 </li>
-        <li>ACIT 1420</li>
-        <LI>ORGB 1100 - <a href="https://www.bcit.ca/outlines/20223041875/">Course Outline</a></LI>
+    <ul id="">
+       <li><a href="misc/school.html">My School</a></li>
+       <li><a href="misc/courses.html">My Courses</a></li>
     </ul>
     </section>
 </main>
 <footer>
     <img src="images/0015_13A.jpg" alt="DOG" width="200" height="135">
-    <br>
-    <a href="https://www.bcit.ca/"><img src="images/BCIT_logo.svg.png" alt="BCIT logo" width="100" height="100"></a>
    
 </footer>
 </body>
