--- a/misc/courses.html
+++ b/misc/courses.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>My Personal Website</title>
-    <link rel="stylesheet" href="CSS/stylesheet.css">
+    <link rel="stylesheet" href="../CSS/stylesheet.css">
 </head>
 
 <body>
@@ -22,10 +22,6 @@
     </section>
 </main>
 
-    <br>
-    <a href="https://www.bcit.ca/"><img src="../images/BCIT_logo.svg.png" alt="BCIT logo" width="100" height="100"></a>
-   
-</footer>
 </body>
 
 </html>
