Updated heading fonts, linked to Google Fonts,  added color and centered navbar.

--- a/index.html
+++ b/index.html
@@ -3,12 +3,15 @@
 
 <head>
     <title>My Personal Website</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="CSS/stylesheet.css">
 </head>
 
 <body>
     <header>
-    <h1>LAB 2</h1>
+    <h1 class="lab2">LAB 2</h1>
     </header>
     <main>
     <article>
@@ -20,8 +23,9 @@
     </p>
     </article>
 
-    <section>
-    <ul id="">
+    <section id="navbar">
+    <h2>LINKS</h2>
+    <ul>
        <li><a href="misc/school.html">My School</a></li>
        <li><a href="misc/courses.html">My Courses</a></li>
     </ul>
