--- a/misc/school.html
+++ b/misc/school.html
@@ -10,10 +10,9 @@
     <header>
     <h1>My School</h1>
     </header>
-
+<main>
     <a href="https://www.bcit.ca/"><img src="../images/BCIT_logo.svg.png" alt="BCIT logo" width="100" height="100"></a>
-   
-
+</main>
 </body>
 
 </html>
