Modify layout with flex and grid

--- a/index.html
+++ b/index.html
@@ -1,40 +1,38 @@
 <!DOCTYPE html>
 <html lang="en-us">
-
-<head>
+  <head>
     <title>My Personal Website</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="CSS/stylesheet.css">
-</head>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="CSS/stylesheet.css" />
+  </head>
 
-<body>
+  <body>
     <header>
-    <h1 class="lab2">LAB 2</h1>
+      <h1 class="lab2">Welcome to my Website</h1>
+      <section id="navbar">
+        <ul>
+          <li><a href="misc/school.html">My School</a></li>
+          <li><a href="misc/courses.html">My Courses</a></li>
+        </ul>
+      </section>
     </header>
+
     <main>
-    <article>
-    <h2>The personal website</h2>
-
-    <p>I am having <em>so much</em> fun coding in HTML. I just learned that Git is important for developers to keep track of their changes
-        and different versions. I'm also writing this in <strong>VSCODE</strong>, which is the best code editor you can use.
-        I love computer science.
-    </p>
-    </article>
-
-    <section id="navbar">
-    <h2>LINKS</h2>
-    <ul>
-       <li><a href="misc/school.html">My School</a></li>
-       <li><a href="misc/courses.html">My Courses</a></li>
-    </ul>
-    </section>
-</main>
-<footer>
-    <img src="images/0015_13A.jpg" alt="DOG" width="200" height="135">
-   
-</footer>
-</body>
-
+      <p>
+        I am having <em>so much</em> fun coding in HTML. I just learned that Git
+        is important for developers to keep track of their changes and different
+        versions.
+      </p>
+      <img src="images/0015_13A.jpg" class="dog" alt="DOG" width="200" height="135" />
+      <p>I'm also writing this in <strong>VSCODE</strong>, which is the
+        best code editor you can use. I love computer science.
+      </p>
+    </main>
+    <footer></footer>
+  </body>
 </html>
