Applied stylesheet to courses.html

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
   <body>
     <header>
-      <h1 class="lab2">Welcome to my Website</h1>
+      <h1>Welcome to my Website</h1>
       <section id="navbar">
         <ul>
           <li><a href="misc/school.html">My School</a></li>
@@ -33,6 +33,9 @@
         best code editor you can use. I love computer science.
       </p>
     </main>
-    <footer></footer>
+
+    <footer class="footer-flex">
+        <p>Copyright data</p>
+    </footer>
   </body>
 </html>
