--- a/misc/courses.html
+++ b/misc/courses.html
@@ -7,20 +7,27 @@
 </head>
 
 <body>
-    <header>
+    <header class="header-flex">
     <h1>Course List</h1>
     </header>
 
-<main>
-    <section>
+<main class="main-flex">
+    <section class="text-grid">
     <h2>My Courses</h2>
+    <p class="main1">
     <ul>
         <li>COMM 1116 </li>
         <li>ACIT 1420</li>
         <LI>ORGB 1100 - <a href="https://www.bcit.ca/outlines/20223041875/">Course Outline</a></LI>
     </ul>
+    </p>
+    <p class="main2"></p>
     </section>
 </main>
+
+<footer class="footer-flex">
+    <p>Copyright Data</p>
+</footer>
 
 </body>
 
