--- a/index.html
+++ b/index.html
@@ -12,30 +12,40 @@
   </head>
 
   <body>
-    <header>
+    <header class="header-flex">
       <h1>Welcome to my Website</h1>
-      <section id="navbar">
-        <ul>
-          <li><a href="misc/school.html">My School</a></li>
-          <li><a href="misc/courses.html">My Courses</a></li>
-        </ul>
-      </section>
+      <!-- <section id="navbar"> -->
+      <ul>
+        <li><a href="misc/school.html">My School</a></li>
+        <li><a href="misc/courses.html">My Courses</a></li>
+      </ul>
+      <!-- </section> -->
     </header>
 
-    <main>
-      <p>
-        I am having <em>so much</em> fun coding in HTML. I just learned that Git
-        is important for developers to keep track of their changes and different
-        versions.
-      </p>
-      <img src="images/0015_13A.jpg" class="dog" alt="DOG" width="200" height="135" />
-      <p>I'm also writing this in <strong>VSCODE</strong>, which is the
-        best code editor you can use. I love computer science.
-      </p>
+    <main class="main-flex">
+      <div class="text-grid">
+        <h2>ABOUT ME</h2>
+        <p class="text1">
+          I am having <em>so much</em> fun coding in HTML. I just learned that
+          Git is important for developers to keep track of their changes and
+          different versions.
+        </p>
+        <p class="text2">
+          I'm also writing this in <strong>VSCODE</strong>, which is the best
+          code editor you can use. I love computer science.
+        </p>
+      </div>
+        <img
+          src="images/0015_13A.jpg"
+          class="dog"
+          alt="DOG"
+          width=""
+          height="250"
+        />
     </main>
 
     <footer class="footer-flex">
-        <p>Copyright data</p>
+      <p class="copyright">Copyright data</p>
     </footer>
   </body>
 </html>
