--- a/misc/school.html
+++ b/misc/school.html
@@ -7,12 +7,22 @@
 </head>
 
 <body>
-    <header>
+    <header class="header-flex">
     <h1>My School</h1>
     </header>
-<main>
-    <a href="https://www.bcit.ca/"><img src="../images/BCIT_logo.svg.png" alt="BCIT logo" width="100" height="100"></a>
+<main class="main-flex">
+    <div class="text-grid">
+    <p class="text1">
+    <a class="" href="https://www.bcit.ca/">
+        <img class="main2" src="../images/BCIT_logo.svg.png" alt="BCIT logo" width="100" height="100">
+    </a>
+    </p>
 </main>
+
+<footer class="footer-flex">
+    <p>Copyright Data</p>
+</footer>
+
 </body>
 
 </html>
