header ul, header li selectors, rename html classes

--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
           code editor you can use. I love computer science.
         </p>
       </div>
+      <div class="dog">
+        <p>
         <img
           src="images/0015_13A.jpg"
           class="dog"
@@ -42,10 +44,14 @@
           width=""
           height="250"
         />
+        </p>
+      </div>
     </main>
 
     <footer class="footer-flex">
-      <p class="copyright">Copyright data</p>
+      <div>
+      Copyright data
+      </div>
     </footer>
   </body>
 </html>
