--- a/misc/courses.html
+++ b/misc/courses.html
@@ -14,14 +14,14 @@
 <main class="main-flex">
     <section class="text-grid">
     <h2>My Courses</h2>
-    <p class="main1">
+    <div class="text1">
     <ul>
         <li>COMM 1116 </li>
         <li>ACIT 1420</li>
-        <LI>ORGB 1100 - <a href="https://www.bcit.ca/outlines/20223041875/">Course Outline</a></LI>
+        <li>ORGB 1100 - <a href="https://www.bcit.ca/outlines/20223041875/">Course Outline</a></li>
     </ul>
-    </p>
-    <p class="main2"></p>
+    </div>
+    <!-- <p class="text2"></p> -->
     </section>
 </main>
 
