--- a/misc/school.html
+++ b/misc/school.html
@@ -12,9 +12,10 @@
     </header>
 <main class="main-flex">
     <div class="text-grid">
+    <h2>BCIT Link</h2>
     <p class="text1">
     <a class="" href="https://www.bcit.ca/">
-        <img class="main2" src="../images/BCIT_logo.svg.png" alt="BCIT logo" width="100" height="100">
+        <img src="../images/BCIT_logo.svg.png" alt="BCIT logo" width="100" height="100">
     </a>
     </p>
 </main>
