Add nav bar to all pages

--- a/index.html
+++ b/index.html
@@ -28,30 +28,28 @@
         <p class="text1">
           I am having <em>so much</em> fun coding in HTML. I just learned that
           Git is important for developers to keep track of their changes and
-          different versions.
+          different versions. <br>
         </p>
         <p class="text2">
           I'm also writing this in <strong>VSCODE</strong>, which is the best
-          code editor you can use. I love computer science.
+          code editor you can use. I love computer science. 
         </p>
       </div>
       <div class="dog">
         <p>
-        <img
-          src="images/0015_13A.jpg"
-          class="dog"
-          alt="DOG"
-          width=""
-          height="250"
-        />
+          <img
+            src="images/0015_13A.jpg"
+            class="dog"
+            alt="DOG"
+            width=""
+            height="250"
+          >
         </p>
       </div>
     </main>
 
     <footer class="footer-flex">
-      <div>
-      Copyright data
-      </div>
+      <div>Copyright data</div>
     </footer>
   </body>
 </html>
