--- a/misc/courses.html
+++ b/misc/courses.html
@@ -9,6 +9,10 @@
 <body>
     <header class="header-flex">
     <h1>Course List</h1>
+    <ul>
+        <li><a href="../index.html">Home</a></li>
+        <li><a href="school.html">My School</a></li>
+      </ul>
     </header>
 
 <main class="main-flex">
