--- a/misc/school.html
+++ b/misc/school.html
@@ -9,6 +9,10 @@
 <body>
     <header class="header-flex">
     <h1>My School</h1>
+    <ul>
+        <li><a href="../index.html">Home</a></li>
+        <li><a href="courses.html">My Courses</a></li>
+      </ul>
     </header>
 <main class="main-flex">
     <div class="text-grid">
