--- a/misc/courses.html
+++ b/misc/courses.html
@@ -3,7 +3,14 @@
 
 <head>
     <title>My Personal Website</title>
+    <meta name="viewport" content="width=device-width">
     <link rel="stylesheet" href="../CSS/stylesheet.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@900&display=swap"
+      rel="stylesheet"
+    />
 </head>
 
 <body>
