--- a/misc/school.html
+++ b/misc/school.html
@@ -3,6 +3,13 @@
 
 <head>
     <title>My Personal Website</title>
+    <meta name="viewport" content="width=device-width">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@900&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="../CSS/stylesheet.css">
 </head>
 
