Added course info and fixed stylesheet.css

--- a/misc/courses.html
+++ b/misc/courses.html
@@ -4,7 +4,7 @@
 <head>
     <title>My Personal Website</title>
     <meta name="viewport" content="width=device-width">
-    <link rel="stylesheet" href="../CSS/stylesheet.css">
+    <link rel="stylesheet" href="../CSS/courses.css">
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -15,22 +15,35 @@
 
 <body>
     <header class="header-flex">
-    <h1>Course List</h1>
+    <h1>My Courses</h1>
     <ul>
         <li><a href="../index.html">Home</a></li>
         <li><a href="school.html">My School</a></li>
-      </ul>
+    </ul>
     </header>
 
-<main class="main-flex">
-    <section class="text-grid">
-    <h2>My Courses</h2>
-    <div class="text1">
-    <ul>
-        <li>COMM 1116 </li>
-        <li>ACIT 1420</li>
-        <li>ORGB 1100 - <a href="https://www.bcit.ca/outlines/20223041875/">Course Outline</a></li>
-    </ul>
+<main class="main-flex">    
+    <section class="text1">
+    <div>
+        <p class="link"><a href="https://www.bcit.ca/outlines/20223048469/"> COMM 1116 - Business Communications 1</a></p>
+        <p class="term">Fall 2022</p>
+        <p class="desc">This course introduces the fundamental principles and techniques for designing and developing effective Web sites.</p>
+    </div>
+    </section>
+
+    <section class="text2">
+    <div>
+        <p class="link"><a href="https://www.bcit.ca/outlines/20223048468/">ACIT 1420 - Intro to Systems Admin</a></p>
+        <p class="term">Fall 2022</p>
+        <p class="desc">This course introduce students to the configuration, maintenance, and administration of a Window's laptop.</p>
+    </div>
+    </section>
+
+    <section class="text3">
+    <div>
+        <p class="link"><a href="https://www.bcit.ca/outlines/20223041875/">ORGB 1100 - Organizational Behaviour</a></p>
+        <p class="term">Fall 2022</p>
+        <p class="desc">This course covers individual and team behaviours within organizations.</p>
     </div>
     <!-- <p class="text2"></p> -->
     </section>
