--- a/misc/courses.html
+++ b/misc/courses.html
@@ -23,28 +23,24 @@
     </header>
 
 <main class="main-flex">    
-    <section class="text1">
-    <div>
+    <section class="text">
         <p class="link"><a href="https://www.bcit.ca/outlines/20223048469/"> COMM 1116 - Business Communications 1</a></p>
         <p class="term">Fall 2022</p>
         <p class="desc">This course introduces the fundamental principles and techniques for designing and developing effective Web sites.</p>
-    </div>
     </section>
 
-    <section class="text2">
-    <div>
+    <section class="text">
         <p class="link"><a href="https://www.bcit.ca/outlines/20223048468/">ACIT 1420 - Intro to Systems Admin</a></p>
         <p class="term">Fall 2022</p>
         <p class="desc">This course introduce students to the configuration, maintenance, and administration of a Window's laptop.</p>
-    </div>
     </section>
 
-    <section class="text3">
-    <div>
+    <section class="text">
+
         <p class="link"><a href="https://www.bcit.ca/outlines/20223041875/">ORGB 1100 - Organizational Behaviour</a></p>
         <p class="term">Fall 2022</p>
         <p class="desc">This course covers individual and team behaviours within organizations.</p>
-    </div>
+
     <!-- <p class="text2"></p> -->
     </section>
 </main>
