--- a/misc/courses.html
+++ b/misc/courses.html
@@ -11,6 +11,7 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@900&display=swap"
       rel="stylesheet"
     />
+    <script src="../JS/script.js"></script>
 </head>
 
 <body>
